--- a/Backend/package.json
+++ b/Backend/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "dotenv-extended": "^2.9.0",
     "express": "^4.21.1",
     "mongoose": "^8.8.1",
     "multer": "^1.4.5-lts.1",
