--- a/Backend/package.json
+++ b/Backend/package.json
@@ -25,6 +25,7 @@
     "express": "^4.21.1",
     "mongoose": "^8.8.1",
     "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.1.7",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-circular-progressbar": "^2.1.0",
