--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^18.3.1",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.28.0",
+    "react-toastify": "^10.0.6",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
