--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -23,12 +23,14 @@
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.6",
     "file-saver": "^2.0.5",
+    "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-chartjs-2": "^5.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.28.0",
     "react-toastify": "^10.0.6",
